[project]
name = "gnss-tools"
version = "0.1.0"
description = "A suite of tools for handling GNSS data and datastructures, including RINEX parsing, orbit propagation, signal generation, and more."
authors = [
    { name = "Brian Breitsch", email = "brian.breitsch@colorado.edu>"}
]
license = "BSD-2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["scipy (>=1.16.3,<2.0.0)", "numba (>=0.62.1,<0.63.0)", "hatanaka (>=2.8.1,<3.0.0)", "requests (>=2.32.5,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"

